[Vin] - Fixed image stretching with featured images

--- a/article/static/article/css/article.less
+++ b/article/static/article/css/article.less
@@ -318,7 +318,6 @@
     position: relative;
     img {
 	      width: 100%;
-	      height: auto;
     }
 
     a {
