--- a/core/static/css/v2/pages/story/story.less
+++ b/core/static/css/v2/pages/story/story.less
@@ -202,10 +202,10 @@
 
   .banner-container{
     width: 100%;
-    height: 100vh;
-    img{
-      max-height: 100%;
-    }
+    // height: 100vh;
+    // img{
+    //   max-height: 100%;
+    // }
   }
 }
 @media print {
